--- a/style.css
+++ b/style.css
@@ -40,6 +40,25 @@ nav {
     border: none;
 }
 
+.secondary-bg {
+    background-color: #fff8f3;
+}
+
+.section-title {
+    font-size: 30px;
+    font-weight: bold;
+    color: black;
+}
+
+.section-description {
+    font-size: 15px;
+    color: #8e8d8d;
+}
+
+.text-center {
+    text-align: center;
+}
+
 .nav-title {
     font-weight: 800;
     font-size: 40px;
@@ -66,6 +85,7 @@ nav li a {
     display: flex;
     justify-content: space-between;
     margin: 0 30px 0 120px;
+    margin-top: 20px;
 }
 
 .banner-content {
@@ -86,4 +106,94 @@ nav li a {
 .banner-profile-pic {
     width: 400px;
     margin-right: 50px;
+}
+
+/*main styles*/
+main {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+main section {
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+
+/* about styles*/
+.about {
+    border-radius: 10px;
+    padding: 50px 150px;
+    text-align: center;
+    margin-top: 100px;
+}
+
+.about-items {
+    display: flex;
+    justify-content: space-around;
+}
+
+.item-description {
+    font-weight: 600;
+}
+
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgb(209, 208, 208);
+}
+
+/*resume section styles*/
+.resume-container{
+    display: flex;
+    gap: 24px;
+}
+.experience-title{
+    font-size: 20px;
+    margin-bottom: 0px;
+}
+.experience-sub-title{
+    font-size: 15px;
+    color: #757575;
+    font-weight: 600;
+    margin-bottom: 30px;
+}
+.experience-description{
+    color: #757575;
+}
+
+.resume-download-cv{
+    margin-top: 50px;
+}
+
+/*footer style*/
+footer{
+    display: flex;
+    gap: 100px;
+    background: #fff8f3;
+    margin-top: 100px;
+    padding: 130px 200px;
+}
+.footer-column{
+    width: 50%;
+}
+.social-links{
+    display: flex;
+    align-items: center;
+}
+.social-links a{
+    margin: 20px;
+}
+
+.Contact input,textarea{
+    display: block;
+    margin-bottom: 20px;
+    border: none;
+    padding: 18px 35px;
+    border-radius: 5px;
+    width: 100%;
 }
